-------------------------------------------------------------------------------
CorsixTH 0.69.0 Release Candidate 1 - released July 2025
-------------------------------------------------------------------------------
# Translations
* Russian translation has been updated. Thanks @Matroftt
* French translation has been updated. Thanks @legluondunet

-------------------------------------------------------------------------------
CorsixTH 0.69.0 Beta 2 - released June 2025
-------------------------------------------------------------------------------
# Features
* Custom level/campaign creators can now use an existing level file as an
  overlay to copy and extend their level file with the #overlay variable. See
  the 'Custom Level' Wiki page for more information.

# Changes
* You can now hear patients vomiting, instead of just the vomit splatters
* Lakes no longer show in the Town Map as per the original game
* Warns of incompatibility for saves more than 2 releases old

# Translations
* Russian translation has been updated. Thanks @ARGAMX

# Bug Fixes
* Fixed some anomalies in the original campaign's map files

# Regressions
* Fixed a crash in General Diagnosis
* Fixed a compatibility issue with mood markers on old
  saves
* Fixed a crash with the grim reaper
* Fixed a bug with the hotkey assignment menu
* Fixed an issue with handymen ignoring cleaning duties. Please note existing
  saves from Beta 1 currently have no fix implemented for those duties already
  broken.

-------------------------------------------------------------------------------
CorsixTH 0.69.0 Beta 1 - released June 2025
-------------------------------------------------------------------------------
# New Features/Enhancements
* A new machine menu has been added. Now you can view the status of all your
  hospital machines in one place!
* Changing speed in game now happens immediately
* Patient happiness can now be a win/lose factor in custom games